- 
    Bug 
- 
    Resolution: Done
- 
    P1: Critical 
- 
    5.2.0 Beta1
- 
    None
- 
        0008a6f4000674020db96ff4475094d049d094f6
D:\dev\qt\qt-stable\src\qtbase\src\3rdparty\angle\src\libGLESv2\renderer\IndexRangeCache.cpp: In member function 'bool rx::IndexRangeCache::IndexRange::operator<(const rx::IndexRangeCache::IndexRange& ) const': D:\dev\qt\qt-stable\src\qtbase\src\3rdparty\angle\src\libGLESv2\renderer\IndexRangeCache.cpp:87:56: error: 'std::tr1' has not been declared return std::make_tuple(type, offset, count) < std::tr1::make_tuple(rhs.type, rhs.offset, rhs.count);
                                                      ^
D:\dev\qt\qt-stable\src\qtbase\src\3rdparty\angle\src\libGLESv2\renderer\IndexRangeCache.cpp:89:1: w
arning: control reaches end of non-void function [-Wreturn-type]
 }
 ^
- is required for
- 
                    QTBUG-33305 Issues to be fixed before Qt5.2 Beta1 release -         
- Closed
 
-         
- replaces
- 
                    QTBUG-34044 Problem compiling Qt 5.2 stable with MinGW 4.8.1 -           
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-34080 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 68156,3 | Fix compilation of ANGLE on MinGW | stable | qt/qtbase | Status: MERGED | +2 | 0 |