Fix compilation of ANGLE on MinGW

This broke with commit  89f9bc9c5f873d6763e35d2f92d31c28f8fb5262.

Task-number: QTBUG-34080
Change-Id: Ib3c7a3c90db7dc04f417eba4c1328390f45e5e5f
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@digia.com>

cregit: 0008a6f4000674020db96ff4475094d049d094f6 https://github.com/qt/qtbase/commit/0008a6f4000674020db96ff4475094d049d094f6